mongoldap is unable to parse regular mongod config file options

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.3.14
    • Affects Version/s: None
    • Component/s: Security
    • None
    • Fully Compatible
    • ALL
    • Security 19 (08/29/16)
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      The recommended use of mongoldap is to provide it a mongod config file to test a connection.

      Right now all config options except ldap specific ones terminates the tool with the error: "Unrecognized option"

      The work-around is to create a config file using only ldap options or use the command line parameters instead.

      Additionally it would be desirable to support setting/validating the choice of authentication mechanism PLAIN:

      --setParameter authenticationMechanisms=PLAIN
      setParameter: authenticationMechanisms: PLAIN

            Assignee:
            Andreas Nilsson (Inactive)
            Reporter:
            Andreas Nilsson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: