SERVER-25792 Add non-strict parsing option to OptionsParser